<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_tf_publisher</name>
  <version>1.2.0</version>
  <description>
    Node to publish ignition ground truth TF tree
  </description>
  <author email="scenario-execution@intel.com">Intel Labs</author>
  <maintainer email="scenario-execution@intel.com">Intel Labs</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>py_trees_ros_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
